# pimm-data

./: CLAUDE.md  README.md  pyproject.toml
docs/: ADR-pimm-data-package-boundary.md  CAMPAIGN.md  DESIGN.md  IMPLEMENTATION-boundary-refactor.md  README.md  REDESIGN.md  RESTRUCTURE.md  ROADMAP.md  SCHEMA-on-disk.md  engagement_plan_transform_dataset_placement.md  gpu_batch_transforms_handoff.md  gpu_batch_transforms_plan.md  gpu_batch_transforms_plan_v4.md  implementation_plan_pimm_data_datalayer.md  real_data_validation_findings.md  shard_event_filtering_handoff.md
examples/: bench_dense.py  toy_run.py
scripts/: _bench_reader_decode.py  _profile_common.py  _run_jaxtpc_profile.sh  benchmark_loader.py  make_wand_step_mirror.sh  profile_loader.py  profile_scaling.py  transcode_codec.py
tests/: _joint_index_helpers.py  conftest.py  run_wand_sweep.sh  test_aggregate_sensor_hits.py  test_align.py  test_apply_to_modalities.py  test_batch_ops.py  test_batch_transforms.py  test_cache.py  test_campaign_configs.py  test_collect_validation.py  test_dense_collapse.py  test_jaxtpc.py  test_jaxtpc_joint_index.py  test_jaxtpc_pixel.py  test_jaxtpc_robustness.py  test_jaxtpc_semantics.py  test_jaxtpc_task_matrix.py  test_jaxtpc_transforms.py  test_label_decorate.py  test_lucid.py  test_lucid_joint_index.py  test_multicrop.py  test_multimodal.py  test_noise.py  test_optical.py  test_pf1_golden.py  test_phase1.py  test_pilarnet_v3.py  test_producers.py  test_roles_collate.py  test_source_event_idx.py  test_streams.py  test_torch_free_readers.py  test_transform_merges.py  (+3 more)
(+59 files in other folders)
